# prefix-by-date

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  move-date-upfront.rb
files/: config.toml  debug.desktop  patterns.toml  prefix-by-date.desktop  setup.reg
mise/tasks/: coverage  linter
src/: cli.rs  file.rs  log_config.rs  main.rs  replacement.rs  state.rs
src/application/: arguments.rs  cli.rs  error.rs  log_reporter.rs  mod.rs
src/cli/: mod.rs  reporter.rs
src/context/: error.rs  mod.rs
src/matcher/: metadata.rs  mod.rs  pattern.rs  predetermined_date.rs
src/processing/: error.rs  log_reporter.rs  matcher.rs  mod.rs  notif_reporter.rs  path_info.rs
src/reporter/: aggregate.rs  log_reporter.rs  mod.rs
src/test/: assert_fs.rs  matchers.rs  mod.rs  paths.rs  prelude.rs
src/ui/: actions.rs  gui.rs  mod.rs  state.rs  text.rs
src/ui/gui/: processing.rs  window.rs
tests/: .gitignore  Makefile  main.rs
tests/fixtures/: config.toml
tests/fixtures/configs/: different.toml  non_toml
tests/fixtures/configs/time/: non_bool.toml  true.toml
