[package]
name = "prefix-by-date"
description = "Prefix given files by a date"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.11", features = ["derive"] }
clap-verbosity-flag = "2.0.0"
exec = "0.3.1"
env_logger = "0.9.1"
log = "0.4.17"
systemd-journal-logger = "2.1.0"
chrono = "0.4.31"
regex = "1.10.2"
toml = { version = "0.8.6", features = ["preserve_order"] }
xdg = "2.5.2"
indicatif = { version = "0.17.7", optional = true }
dialoguer = { version = "0.11.0", optional = true, features = ["fuzzy-select"] }
indicatif-log-bridge = { version = "0.2.2", optional = true }
dyn-clone = "1.0.16"
diff = "0.1.13"

[features]
cli = ["indicatif", "indicatif-log-bridge", "dialoguer"]

[dev-dependencies]
assert_fs = "1.0.13"
predicates = "3.0.4"
pretty_assertions = "1.4.0"
temp-env = "0.3.6"
