[package]
name = "prefix-by-date"
description = "Prefix files by date"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Jaffa Geoffroy Planquart"]
repository = "https://codeberg.org/Jaffa/prefix-by-date"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
clap-verbosity-flag = "2.2.2"
env_logger = "0.11.5"
log = "0.4.22"
chrono = { version = "0.4.38", features = ["clock"] }
regex = "1.11.1"
toml = { version = "0.8.19", features = ["preserve_order"] }
xdg = "2.5.2"
dyn-clone = "1.0.17"
diff = "0.1.13"

indicatif = { version = "0.17.8", optional = true }
dialoguer = { version = "0.11.0", optional = true, features = ["fuzzy-select"] }
indicatif-log-bridge = { version = "0.2.3", optional = true }
iced = { version = "0.13.1", optional = true, features = ["advanced", "tokio"] }
tokio = { version = "1.41.0", optional = true, features = ["time"] }
notify-rust = { version = "4.11.3", optional = true }
once_cell = { version = "1.20.2", optional = true }
anyhow = "1.0.91"

[target.'cfg(target_os = "linux")'.dependencies]
systemd-journal-logger = { version = "2.2.0" }

[features]
default = ["text", "gui"]
text = ["dep:indicatif", "dep:indicatif-log-bridge", "dep:dialoguer"]
gui = ["dep:iced", "dep:tokio", "dep:once_cell"]
notif = ["dep:notify-rust"]

[dev-dependencies]
assert_cmd = "2.0.16"
assert_fs = "1.1.2"
mockall = "0.13.0"
predicates = "3.1.2"
pretty_assertions = "1.4.1"
temp-env = "0.3.6"
test-log = "0.2.16"
